@@ -16,6 +16,7 @@ Symfonize framework's seperation lines
 Symfonize framework groups
 Symfonize agents index page
 Symfonize framework table edit/add
+Add a param to define the switching time between half-day and full-day
 
 
 -Fixes
